キャンプサイトページの見た目を整えた

--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,4 +1,6 @@
 .like-container {
-  margin: 0 20px;
+  width: 95vw;
+  margin: 0 auto;
+  padding-bottom: 10px;
   border-bottom: solid rgb(185, 185, 185) 1px ;
 }
