--- a/app/assets/stylesheets/tweets/index.css
+++ b/app/assets/stylesheets/tweets/index.css
@@ -5,6 +5,7 @@
 
 .list {
   /* background-color: darkolivegreen; */
+  /* background: linear-gradient( #e7e7e7f3,  #fffffff3); */
   margin: 20px 0;
   width: 100%;
 }
