--- a/app/assets/stylesheets/camp_sites.scss
+++ b/app/assets/stylesheets/camp_sites.scss
@@ -22,7 +22,6 @@
 
 .camp-site {
   display: flex;
-  // justify-content: center;
   width: 95vw;
   height: 40px;
   line-height: 40px;
@@ -46,57 +45,160 @@
 
 // camp-site show
 
+.c-site-box {
+  width: 95vw;
+  margin: 10px auto;
+  border: rgba(169, 169, 169, 0.5) solid 1px;
+  border-radius: 5px;
+}
+
+.s-show-head-box {
+  // background-color: #8ca9fff3;
+  // background: linear-gradient( #a4bbfff3, #fffffff3);
+  background: linear-gradient( #c2c2c2f3, #fffffff3);
+  padding: 10px 0;
+  border-radius: 5px 5px 0 0;
+}
+
 .site-show-head {
   display: flex;
-  width: 95vw;
-  margin: 0 auto;
+  width: 95%;
+  margin: 10px auto 10px auto;
   height: 30px;
   // background-color: yellowgreen;
+}
+
+.site-show-sub {
+  margin-bottom: 20px;
+  // background-color: coral;
 }
 
 .site-name-show {
   margin-left: 10px;
   font-size: 20px;
+  // background-color: chocolate;
 }
 
 #intere-site {
   line-height: 37px;
+  // background-color: cornflowerblue;
 }
 
 .site-show-content {
-  width: 95vw;
-  margin: 0 auto;
+  width: 95%;
+  margin: 3px auto;
+  // background-color: crimson;
 }
 
 .visit {
   color: #777777f3;
+  width: calc( 95% - 60px );
 }
 
-.site-tweets-list {
+.pref {
+  width: calc( 95% - 60px );
+}
+
+.add {
+  width: calc( 95% - 90px );
+}
+
+.phone {
+  margin-bottom: 10px;
+  width: calc( 95% - 90px );
+}
+
+.type {
+  margin-top: 20px;
+  width: calc( 95% - 60px );
+}
+
+.tweets-list-box {
   margin-top: 50px;
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: solid 2px;
 }
 
-.site-tweet-image {
-  margin: 10px 0 ;
-  height: 30vh;
+.site-tweets-list {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.s-tw-img-box {
   width: 100%;
+  // background-color: aquamarine;
+  text-align: center;
+}
+
+.site-tweet-image {
+  margin: 0 auto ;
+  text-align: center;
+  height: 30vh;
+  width: 95%;
   // min-height: 500px;
-  object-fit: contain;
+  object-fit: cover;
   // background-color: lightgray;
 }
 
 .site-tweet {
   margin: 10px 0;
   width: 95vw;
-  background-color: rgb(241, 241, 241);
-  // border: 1px #77777775 solid;
+  height: 40vh;
+  // background: linear-gradient( #c2c2c2f3, #fffffff3);
+  border: 1px #77777775 solid;
   border-radius: 5px;
   // box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
 }
 
 .visit-time {
-  padding-top: 10px;
+  height: 40px;
+  width: 95%;
+  margin: 0 auto;
+  // background-color: bisque;
+}
+
+.tw-created {
+  line-height: 40px;
+}
+
+
+
+// camp_site interes
+
+.int-title-box {
+  width: 95vw;
+  height: 50px;
+  margin: 10px auto 30px auto;
+  display: flex;
+  align-items: center;
+  // background-color: cadetblue;
+}
+
+.int-sites-title {
+  width: 95vw;
+  margin: 20px auto;
+  font-size: 20px;
+  // background-color: chartreuse;
+}
+
+.int-title-star {
+  width: 30px;
+  height: 30px;
+  margin: 10px 10px 10px 0;
+  // background-color: chocolate;
+}
+
+.int-camp-site {
+  display: flex;
+  width: 95vw;
+  height: 40px;
+  line-height: 40px;
+  margin: 20px auto 20px auto;
+  border: 1px solid rgba(169, 169, 169, 0.5);
+  border-radius: 5px;
+}
+
+.int-site-content {
+  margin: 0 10px;
 }
