--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -19,6 +19,10 @@
   font-size: 50px;
   font-family: 'Homemade Apple', cursive;
   color: aliceblue;
+  /* background-color: darkgray; */
+  text-align: center;
+  /* width: 400px; */
+  margin: 0 auto;
   display: none;
 }
 
