--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,9 @@
 
   <div class="header-left-contents">
   <h1 id="main-title">
-    <%= link_to "Camper.", root_path %>
+    <%= link_to root_path do %>
+      Campary.
+    <% end %>
   </h1>
   </div>
 
