--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,3 +1,4 @@
+<div class="tweet-new">
 <div class="tweet-form">
   <div class="error-messages">
     <%= render 'shared/error_messages', resource: @tweets_tag %>
@@ -18,7 +19,6 @@
   </div>
 
   <div class="tweet-field">
-    
     <%= f.text_area :text, placeholder: '本文を入力(400字以内)', maxlength: '400', class:"field-tweet-text"%>
   </div>
 
@@ -41,4 +41,6 @@
   
   <% end %>
   
+</div>
+<%= render 'shared/sidebar' %>
 </div>
